// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="mdc-radio"
>
  <input
    className="mdc-radio__native-control"
    disabled={undefined}
    id={undefined}
    type="radio"
  />
  <div
    className="mdc-radio__background"
  >
    <div
      className="mdc-radio__outer-circle"
    />
    <div
      className="mdc-radio__inner-circle"
    />
  </div>
</div>
`;

exports[`renders alignEnd 1`] = `
<div
  className="mdc-form-field mdc-form-field--align-end"
>
  <div
    className="mdc-radio"
  >
    <input
      className="mdc-radio__native-control"
      disabled={undefined}
      id="radio"
      type="radio"
    />
    <div
      className="mdc-radio__background"
    >
      <div
        className="mdc-radio__outer-circle"
      />
      <div
        className="mdc-radio__inner-circle"
      />
    </div>
  </div>
  <label
    htmlFor="radio"
  >
    Label
  </label>
</div>
`;

exports[`renders disabled 1`] = `
<div
  className="mdc-radio mdc-radio--disabled"
>
  <input
    className="mdc-radio__native-control"
    disabled={true}
    id={undefined}
    type="radio"
  />
  <div
    className="mdc-radio__background"
  >
    <div
      className="mdc-radio__outer-circle"
    />
    <div
      className="mdc-radio__inner-circle"
    />
  </div>
</div>
`;

exports[`renders with a label 1`] = `
<div
  className="mdc-form-field"
>
  <div
    className="mdc-radio"
  >
    <input
      className="mdc-radio__native-control"
      disabled={undefined}
      id="radio"
      type="radio"
    />
    <div
      className="mdc-radio__background"
    >
      <div
        className="mdc-radio__outer-circle"
      />
      <div
        className="mdc-radio__inner-circle"
      />
    </div>
  </div>
  <label
    htmlFor="radio"
  >
    Label
  </label>
</div>
`;
